<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/acl_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".app.activity_login_etc.LoginActivity">

    <com.admin.control.topTitleBackBar.TopTitleBackBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerBackground="@color/acl_title"
        app:headerLeftTitle="@string/back"
        app:headerRightImageVisibility="gone"
        app:headerTitle="@string/login_pwd" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pay_pwd"
        android:textColor="@color/cl_white"
        android:textSize="@dimen/sp_15"
        android:layout_marginBottom="@dimen/dip_31"
        android:layout_marginTop="@dimen/dip_48"/>

    <com.admin.control.PassCodeView
        android:id="@+id/pass_code_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:numDigits="6"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />


    <Button
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip_59"
        android:background="@drawable/lg_btn_login_sel"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />

</LinearLayout>