<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/acl_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".app.activity_login_etc.LoginActivity">

    <com.admin.control.topTitleBackBar.TopTitleBackBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerBackground="@color/acl_title"
        app:headerLeftTitle="@string/back"
        app:headerRightImageVisibility="gone"
        app:headerTitle="@string/login_pwd" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/acl_title"
        android:padding="@dimen/dip_12">

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/pwd" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/iv_pwd"
            android:background="@null"
            android:hint="@string/hint_set_pwd"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_et"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/et_pwd"
            android:layout_alignRight="@id/et_pwd"
            android:layout_below="@id/et_pwd"
            android:background="@color/acl_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/acl_title"
        android:padding="@dimen/dip_12">

        <ImageView
            android:id="@+id/iv_pwd_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/pwd" />

        <EditText
            android:id="@+id/et_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/iv_pwd_confirm"
            android:background="@null"
            android:hint="@string/hint_pwd_confirm"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_et"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/et_pwd_confirm"
            android:layout_alignRight="@id/et_pwd_confirm"
            android:layout_below="@id/et_pwd_confirm"
            android:background="@color/acl_line" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip_31"
        android:background="@drawable/lg_btn_login_sel"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />


</LinearLayout>