<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/acl_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".app.activity_login_etc.LoginActivity">

    <com.admin.control.topTitleBackBar.TopTitleBackBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerBackground="@color/acl_title"
        app:headerLeftTitle="@string/back"
        app:headerRightImageVisibility="gone"
        app:headerTitle="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip_30"
        android:background="@color/acl_title"
        android:padding="@dimen/dip_12">

        <ImageView
            android:id="@+id/iv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/account_phone" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:hint="@string/hint_account"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_et"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/et_name"
            android:layout_alignRight="@id/et_name"
            android:layout_below="@id/et_name"
            android:background="@color/acl_line" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/acl_title"
        android:padding="@dimen/dip_12">

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/pwd" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/iv_pwd"
            android:background="@null"
            android:hint="@string/hint_pwd"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_et"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/et_pwd"
            android:layout_alignRight="@id/et_pwd"
            android:layout_below="@id/et_pwd"
            android:background="@color/acl_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/acl_title"
        android:padding="@dimen/dip_12">

        <ImageView
            android:id="@+id/iv_yzm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/yzm" />

        <Button
            android:id="@+id/btn_get_yzm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_get_yzm_sel"
            android:text="@string/get_yzm"
            android:textColor="@color/cl_get_yzm_sel"
            android:textSize="@dimen/sp_12" />

        <EditText
            android:id="@+id/et_yzm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toLeftOf="@id/btn_get_yzm"
            android:layout_toRightOf="@id/iv_yzm"
            android:background="@null"
            android:hint="@string/hint_yzm"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_et"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/et_yzm"
            android:layout_alignRight="@id/btn_get_yzm"
            android:layout_below="@id/et_yzm"
            android:background="@color/acl_line" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip_31"
        android:background="@drawable/lg_btn_login_sel"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dip_21">

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_regist"
            android:textSize="@dimen/sp_9"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/dip_12"
            android:textColor="@color/acl_regist"/>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_regist"
            android:textSize="@dimen/sp_9"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/dip_12"
            android:textColor="@color/acl_forget"/>

    </RelativeLayout>

</LinearLayout>